[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backpressure"
version = "0.0.1"
description = "Placeholder for an upcoming package; not ready for use."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Stanislav Kosorin", email = "stanokosorin4@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  "basedpyright==1.39.0",
  "pytest==9.0.3",
  "ruff==0.15.10",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["backpressure"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
